--- a/index.html
+++ b/index.html
@@ -3,11 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First GitHub Page!</title>
+    <title>The Strangers Band</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to bottom right, #1e3c72, #2a5298);
+            color: #fff;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+        }
+        h1 {
+            font-size: 3em;
+            margin-bottom: 0.5em;
+        }
+        p {
+            font-size: 1.2em;
+        }
+        a {
+            color: #ffdd57;
+            text-decoration: none;
+            margin-top: 1em;
+            display: inline-block;
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <p>This is my first website page, hosted completely free on GitHub Pages.</p>
-    <p>I can edit this file to add more content, images, and links.</p>
+    <h1>Welcome to The Strangers Band</h1>
+    <p>Our music, our story, our passion.</p>
+    <a href="#listen">Listen to our tracks</a>
 </body>
 </html>
