--- a/index.html
+++ b/index.html
@@ -107,13 +107,30 @@
     <a href="https://open.spotify.com/track/example" target="_blank">Track 1</a>
     <a href="https://open.spotify.com/track/example" target="_blank">Track 2</a>
     <a href="https://open.spotify.com/track/example" target="_blank">Track 3</a>
+    <section id="music">
+  <h2>Music</h2>
+  <p>Check out our latest video:</p>
+
+  <div style="
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    margin: 0 auto 30px auto;
+    border-radius: 12px;
+  ">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LzkaQ50aDGA?si=owbru2yJXPK1Ibi-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
+
+  <p>More tracks coming soon!</p>
   </section>
 
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact & Socials</h2>
     <p>Follow us or get in touch:</p>
-    <a href="https://instagram.com/thestrangers.band" target="_blank">Instagram</a>
+    <a href="https://instagram.com/thestrangers.ig" target="_blank">Instagram</a>
     <a href="mailto:info.thestrangersband@gmail.com">Email Us</a>
   </section>
 
