--- a/index.html
+++ b/index.html
@@ -113,12 +113,17 @@ button:hover, .cta:hover {
 
 /* Footer */
 footer {
-    background: rgba(15,15,20,0.9);
+    background: rgba(0, 0, 0, 0.9);
     border-top: 1px solid #ffdd57;
     padding: 20px;
     text-align: center;
     color: #ccc;
-    width: 100%;
+}
+
+footer img {
+    max-height: 40px;
+    vertical-align: middle;
+    margin-right: 10px;
 }
 </style>
 
@@ -128,11 +133,12 @@ footer {
 
   <!-- Navigation -->
   <nav>
-    <a href="#hero">Home</a>
-    <a href="#about">About</a>
-    <a href="#music">Music</a>
+    <a href="index.html">Home</a>
+    <a href="about_us.html">About Us</a>
+    <a href="music.html">Music</a>
     <a href="#contact">Contact</a>
   </nav>
+
 
   <!-- Hero / Welcome Section -->
 <header id="hero">
@@ -144,51 +150,9 @@ footer {
     <a href="#music">Listen Now</a>
 </header>
 
-  <!-- About Section -->
-  <section id="about">
-    <h2>About the Band</h2>
-    <p>
-      Siamo una band nata nel luglio 2021 dall'incontro quasi casuale di un
-      gruppo di ragazzi appassionati di musica. Partiti da sconosciuti,
-      abbiamo trasformato quell'incontro in un'avventura musicale e in
-      un'amicizia che abbiamo portato sia sul palco che fuori in Trentino,
-      Emilia Romagna e Lombardia.
-      La nostra formazione è composta da 16 elementi, in cui spicca una
-      sezione fiati che non passa inosservata. Il nostro repertorio rispecchia
-      in modo poliedrico tutti i rappresentanti della band, spaziando dal rock
-      'n' roll ai successi pop del momento, rock classico, funk fino alla
-      disco. Ogni canzone è curata con arrangiamenti originali e ogni serata
-      è pensata per far ballare e divertire persone di ogni età.
-    </p>
-  </section>
+ 
 
-  <!-- Music Section -->
-  <section id="music">
-    <h2>Music</h2>
-    <p>Check out some of our tracks below:</p>
-    <a href="https://open.spotify.com/track/example" target="_blank">Track 1</a>
-    <a href="https://open.spotify.com/track/example" target="_blank">Track 2</a>
-    <a href="https://open.spotify.com/track/example" target="_blank">Track 3</a>
-    <section id="music">
-  <p>Check out our latest video:</p>
 
-  <div style="
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
-    margin: 0 auto 30px auto;
-    border-radius: 12px;
-  ">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/LzkaQ50aDGA?si=owbru2yJXPK1Ibi-" 
-    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-  </iframe>
-  </div>
-
-  <p>More tracks coming soon!</p>
-  </section>
 
   <!-- Contact Section -->
   <section id="contact">
@@ -200,6 +164,7 @@ footer {
 
   <!-- Footer -->
   <footer>
+    <img src="img/minilogo_2.jpg" >
     &copy; 2025 The Strangers Band. All rights reserved.
   </footer>
 
