--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Strangers </title>
-  <link rel="icon" href="img/minilogo_2.jpg" type="image/png">
-<link rel="stylesheet" href="style.css">
-
+  <title>Contacts - The Strangers</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -18,19 +16,14 @@
     <a href="contact.html">Contact</a>
   </nav>
 
-
-  <!-- Hero / Welcome Section -->
-<header id="hero">
-    <!-- Logo -->
-    <img src="img/logo_bianco.png" alt="The Strangers Band Logo" style="max-width:500px; margin-bottom:20px;" class="logo fade-in">
-
-    <h1>The Strangers Band</h1>
-    <p>Our music, our story, our passion. Welcome to our official page!</p>
-    <a href="#music">Listen Now</a>
-</header>
-
- 
-
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact & Socials</h2>
+    <p>Follow us or get in touch:</p>
+    <a href="https://instagram.com/thestrangers.ig" target="_blank">Instagram</a>
+    <a href="mailto:info.thestrangersband@gmail.com">Email Us</a>
+  </section>
+  
   <!-- Footer -->
 <footer>
   <div class="footer-left">
@@ -48,6 +41,5 @@
     &copy; 2025 The Strangers Band. All rights reserved.
   </div>
 </footer>
-
 </body>
 </html>
