--- a/music.html
+++ b/music.html
@@ -3,59 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - The Strangers Band</title>
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    /* General Styles */
-    body {
-        font-family: Arial, 'Montserrat',  sans-serif;
-        margin: 0;
-        color: #e0e0e0;
-        background: linear-gradient(135deg, #0f0f0f, #1c1c2a);
-        scroll-behavior: smooth;
-    }
-    h1, h2 { color: #ffdd57; margin-bottom: 20px; }
-    p { padding: 0 20px; margin: 0 0 20px 0; line-height: 1.5; }
-    a { color: #ffdd57; text-decoration: none; font-weight: bold; transition: color 0.3s, text-shadow 0.3s; }
-    a:hover { color: #ffd633; text-shadow: 0 0 8px #ffd633; }
-    
-    /* Navigation */
-    nav {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        background: rgba(20,20,30,0.7);
-        backdrop-filter: blur(8px);
-        display: flex;
-        justify-content: center;
-        padding: 12px 0;
-        z-index: 1000;
-    }
-    nav a { margin: 0 15px; color: #fff; }
-    nav a:hover { color: #ffdd57; }
+  <title>Music - The Strangers</title>
+ <link rel="stylesheet" href="style.css">
 
-    /* Section */
-    section {
-        background: rgba(30,30,40,0.85);
-        margin: 80px auto 20px auto;
-        border-radius: 12px;
-        padding: 40px 20px;
-        max-width: 1000px;
-        text-align: center;
-    }
-
-    /* Footer */
-    footer {
-        background: rgba(0,0,0,0.9);
-        border-top: 1px solid #ffdd57;
-        padding: 20px;
-        text-align: center;
-        color: #ccc;
-        width: 100%;
-    }
-    footer img { max-height: 40px; vertical-align: middle; margin-right: 10px; }
-  </style>
 </head>
 <body>
 
@@ -69,7 +19,7 @@
 
   <!-- Music Section -->
   <section id="music">
-    <h2>Music</h2>
+    <h1>Music</h1>
     <p>Check out some of our tracks below:</p>
     <a href="https://open.spotify.com/track/example" target="_blank">Track 1</a>
     <a href="https://open.spotify.com/track/example" target="_blank">Track 2</a>
@@ -96,10 +46,22 @@
   </section>
 
   <!-- Footer -->
-  <footer>
-    <img src="img/minilogo_2.jpg" alt="The Strangers Band Logo">
+<footer>
+  <div class="footer-left">
+    <a href="https://www.instagram.com/thestrangers.ig" target="_blank" class="social-link">
+      <img src="img/Instagram_icon.png" alt="Instagram" class="social-icon">
+    </a>
+    @thestrangers.ig
+  </div>
+
+  <div class="footer-center">
+    <img src="img/minilogo_2.jpg" alt="The Strangers Band Logo" class="footer-logo">
+  </div>
+
+  <div class="footer-right">
     &copy; 2025 The Strangers Band. All rights reserved.
-  </footer>
+  </div>
+</footer>
 
 </body>
 </html>
