--- a/about_us.html
+++ b/about_us.html
@@ -33,9 +33,17 @@
 
   </section>
 
-    <section>
-        <img src="img/brass.JPG" alt="Brass" class="section-img">
+  <section>
+    <div class="image-container">
+      <img src="img/brass.JPG" alt="Brass" class="section-img">
+      <div class="overlay-text">
+        <p> Lorenzo Geroldi - Tromba </p>
+        <p> Daniele Fedrizzi - Sax Contralto </p>
+        <p> Giovanni Bertolaso - Sax Tenore </p>
+        <p> Marco Zampieri- Sax Baritono </p>
 
+      </div>
+    </div>
   </section>
 
       <section>
@@ -60,19 +68,16 @@
 
   <!-- Footer -->
 <footer>
+ <footer>
   <div class="footer-left">
     <a href="https://www.instagram.com/thestrangers.ig" target="_blank" class="social-link">
       <img src="img/Instagram_icon.png" alt="Instagram" class="social-icon">
+      
     </a>
     @thestrangers.ig
   </div>
-
-  <div class="footer-center">
-    <img src="img/minilogo_2.jpg" alt="The Strangers Band Logo" class="footer-logo">
-  </div>
-
   <div class="footer-right">
-    &copy; 2025 The Strangers Band. All rights reserved.
+        <img src="img/minilogo_2.jpg" alt="The Strangers Band Logo" class="footer-logo">
   </div>
 </footer>
 
