--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacts - The Strangers</title>
+    <link rel="icon" href="img/minilogo_2.jpg" type="image/png">
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +26,6 @@
   </section>
   
   <!-- Footer -->
-
 <footer>
   <div class="footer-left">
     <a href="https://www.instagram.com/thestrangers.ig" target="_blank" class="social-link">
