--- a/music.html
+++ b/music.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Music - The Strangers</title>
+    <link rel="icon" href="img/minilogo_2.jpg" type="image/png">
  <link rel="stylesheet" href="style.css">
-
 </head>
+
 <body>
 
   <!-- Navigation -->
