--- a/about_us.html
+++ b/about_us.html
@@ -26,7 +26,7 @@
       abbiamo trasformato quell'incontro in un'avventura musicale e in un'amicizia che viviamo sia sul palco sia fuori, portando la nostra musica in Trentino, 
       Emilia Romagna e Lombardia.
     </p>
-    <p> Con 16 musicisti sul palco, la nostra formazione sprigiona energia grazie anche a una notevole sezione fiati capace di trascinare il pubblico fin dal primo istante
+    <p> Con 16 musicisti sul palco, la nostra formazione sprigiona energia grazie a una sezione fiati capace di trascinare il pubblico fin dal primo istante.
       Il nostro repertorio riflette in modo poliedrico tutti i membri della band, spaziando dal rock ‘n’ roll ai successi pop del momento, 
       dal rock classico al funk fino alla disco.  </p>     
       <p>Ogni brano è arricchito da arrangiamenti originali, e ogni serata è pensata per far ballare e divertire 
@@ -38,33 +38,57 @@
     <div class="image-container">
       <img src="img/brass.JPG" alt="Brass" class="section-img">
       <div class="overlay-text">
-        <p> Lorenzo Geroldi - Tromba </p>
+        <p> Lorenzo Geroldi -  Tromba </p>
         <p> Daniele Fedrizzi - Sax Contralto </p>
         <p> Giovanni Bertolaso - Sax Tenore </p>
         <p> Marco Zampieri- Sax Baritono </p>
-
+        <p> Nicholas Scorza - Tuba </p>
       </div>
     </div>
   </section>
 
-      <section>
-        <img src="img/vocals.JPG" alt="Brass" class="section-img">
-
+  <section>
+    <div class="image-container">
+      <img src="img/vocals.JPG" alt="vocals" class="section-img">
+      <div class="overlay-text">
+        <p> Chiara De Micheli  </p>
+        <p> Tommaso Dorigoni</p>
+        <p> Angela Artico  </p>
+        <p> Giulia Villa </p>
+      </div>
+    </div>
   </section>
 
-    <section>
-        <img src="img/rythmic.JPG" alt="Brass" class="section-img">
-
+  <section>
+    <div class="image-container">
+      <img src="img/rythmic.JPG" alt="rythmic" class="section-img">
+      <div class="overlay-text">
+        <p> Regina Maletta - Percussioni  </p>
+        <p> Luca Cassini - Percussioni</p>
+        <p> Chiara Maccani - Basso  </p>
+        <p> Lorenzo Paoli - Batteria </p>
+      </div>
+    </div>
   </section>
 
-    <section>
-        <img src="img/comping.JPG" alt="Brass" class="section-img">
-
+  <section>
+    <div class="image-container">
+      <img src="img/comping.JPG" alt="comping" class="section-img">
+      <div class="overlay-text">
+        <p> Sofia Paoli - Chitarra  </p>
+        <p> Pietro Rossetti - Chitarra</p>
+        <p> Selene Demattè - Tastiera </p>
+      </div>
+    </div>
   </section>
 
-      <section>
-        <img src="img/soundman.JPG" alt="Brass" class="section-img">
-
+  <section>
+    <div class="image-container">
+      <img src="img/soundman.JPG" alt="sound" class="section-img">
+      <div class="overlay-text">
+        <p> Guido Giunchi - Fonico </p>
+      </div>
+    </div>
   </section>
 
   <!-- Footer -->
