--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,31 @@
 
   <!-- Contact Section -->
   <section id="contact">
-    <h2>Contact & Socials</h2>
-    <p>Follow us or get in touch:</p>
-    <a href="https://instagram.com/thestrangers.ig" target="_blank">Instagram</a>
-    <a href="mailto:info.thestrangersband@gmail.com">Email Us</a>
+    <h1>Contatti</h1>
+    <h2>info.thestrangersband@gamil.com</h2>
+
+    <p>info tecniche - +39 345 9231078 (Marco)</p>
+
   </section>
+
+<section>
+  <h1>Social</h1>
+
+  <div class="social-buttons">
+    <!-- Instagram button -->
+    <a href="https://www.instagram.com/thestrangers.ig" target="_blank" class="social-btn instagram">
+      <img src="img/Instagram_icon.png" alt="Instagram" class="social-btn-icon">
+      Follow us on Instagram
+    </a>
+
+    <!-- YouTube button -->
+    <a href="https://www.youtube.com/@TheStrangers-ri2js" target="_blank" class="social-btn youtube">
+      <img src="img/youtube_icon.webp" alt="YouTube" class="social-btn-icon">
+      Subscribe on YouTube
+    </a>
+  </div>
+</section>
+
   
   <!-- Footer -->
 <footer>
