--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <h1>The Strangers Band</h1>
     <p>Our music, our story, our passion. Welcome to our official page!</p>
-    <a href="#music">Listen Now</a>
+    <a href="music.html">Listen Now</a>
 </header>
 
  
