--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
   <!-- Hero / Welcome Section -->
 <header id="hero">
     <!-- Logo -->
-    <img src="img/logo_bianco.png" alt="The Strangers Band Logo" style="max-width:500px; margin-bottom:20px;" class="logo fade-in">
-
-    <h1>The Strangers Band</h1>
-    <p>Our music, our story, our passion. Welcome to our official page!</p>
-    <a href="music.html">Listen Now</a>
+    <img src="img/logo_bianco.png" alt="The Strangers Band Logo" class="logo fade-in">
 </header>
 
  
-
+<section>
+   <h1>The Strangers - Official Website</h1>
+     <h2>VIVA!</h2>
+    <p>Our music, our story, our passion. Welcome to our official page!</p>
+    <a href="music.html">Listen Now</a>
+</section>
   <!-- Footer -->
 <footer>
   <div class="footer-left">
