--- a/music.html
+++ b/music.html
@@ -18,6 +18,14 @@
     <a href="contact.html">Contact</a>
   </nav>
 
+
+  <header class="page-header">
+  <img src="img/music.jpg" alt="The Strangers live">
+  <div class="header-overlay">
+    <h1>Music</h1>
+  </div>
+</header>
+
   <!-- Music Section -->
   <section id="music">
     <h1>Music</h1>
@@ -46,6 +54,151 @@
   <p>More tracks coming soon!</p>
   </section>
 
+
+  <!--
+   <section>
+
+      <img src="img/eventi.JPG" alt="sound" class="section-img">
+      <section class="events-section">
+  <h1>Past Events</h1>
+
+  <div class="events-grid">
+    <img src="img/Locandina7.JPEG" alt="Event 1 poster">
+    <img src="img/Locandina8.JPEG" alt="Event 2 poster">
+    <img src="img/Locandina10.JPEG" alt="Event 3 poster">
+    <img src="img/Locandina2.jpg" alt="Event 4 poster">
+    <img src="img/Locandina3.jpg" alt="Event 2 poster">
+    <img src="img/Locandina1.jpg" alt="Event 3 poster">
+    <img src="img/Locandina12.JPEG" alt="Event 4 poster">
+    <img src="img/locandina4.jpg" alt="Event 4 poster">
+    <img src="img/locandina14.png" alt="Event 4 poster">
+    <img src="img/Locandina6.jpg" alt="Event 4 poster">
+     <img src="img/Locandina5.JPG" alt="Private Event">
+    <img src="img/Locandina11.jpg" alt="Event 4 poster">
+    <img src="img/locandina9.jpg" alt="Event 4 poster">
+  </div>
+</section>
+
+-->
+
+<section>
+  <img src="img/eventi.JPG" alt="sound" class="section-img">
+<section class="events-section">
+  
+  <h1>Upcoming Events</h1>
+   <p>Stay Tuned! </p>
+  <h1>Past Events</h1>
+
+  <div class="events-grid">
+
+    <div class="event-card">
+      <img src="img/Locandina7.JPEG" alt="Live in Trento">
+      <p class="event-caption">
+        <strong>  Happening Cremona (CR)</strong><br>
+        15/06/2025 
+      </p>
+    </div>
+
+    <div class="event-card">
+      <img src="img/Locandina8.JPEG" alt="Festival Modena">
+      <p class="event-caption">
+        <strong>Festa Istituto Don Gnocchi (MB)</strong><br>
+        15/06/2025 
+      </p>
+    </div>
+
+        <div class="event-card">
+      <img src="img/Locandina10.JPEG" alt="Festival Modena">
+      <p class="event-caption">
+        <strong>Festa Scuole Bruni (PD)</strong><br>
+        30/05/2025 
+      </p>
+    </div>
+
+    <div class="event-card">
+      <img src="img/Locandina3.jpg" alt="Private Event">
+      <p class="event-caption">
+        <strong>Happening Cremona (CR)</strong><br>
+       18/06/24
+
+      </p>
+    </div>
+
+        <div class="event-card">
+      <img src="img/Locandina1.jpg" alt="Private Event">
+      <p class="event-caption">
+        <strong>Focus Festival - Padova (PD)</strong><br>
+       19/05/2024
+      </p>
+    </div>
+
+
+
+        <div class="event-card">
+      <img src="img/Locandina12.JPEG" alt="Private Event">
+      <p class="event-caption">
+        <strong>Stagione Matrimoni 2024</strong><br>
+       10/05/2024
+      </p>
+    </div>
+    
+    <div class="event-card">
+      <img src="img/locandina4.jpg" alt="Private Event">
+      <p class="event-caption">
+        <strong>Happening Trentino - Levico Terme (TN)</strong><br>
+       29/09/2023
+      </p>
+    </div>
+        <div class="event-card">
+      <img src="img/locandina14.png" alt="Private Event">
+      <p class="event-caption">
+        <strong>Meeting di Rimini (RM)</strong><br>
+       20/08/2023
+      </p>
+    </div>
+        <div class="event-card">
+
+      <img src="img/Locandina6.jpg" alt="Private Event">
+      <p class="event-caption">
+        <strong> Focus Festival - Padova (PD)</strong><br>
+       18/05/2023
+      </p>
+
+          </div>
+            <div class="event-card">
+      <img src="img/Locandina5.JPG" alt="Private Event">
+      <p class="event-caption">
+        <strong> Happening Trentino - Cadonazzo (TN)</strong><br>
+       30/09/2022
+      </p>
+
+
+    </div>
+    
+    <div class="event-card">
+      <img src="img/Locandina11.jpg" alt="Private Event">
+      <p class="event-caption">
+        <strong> Focus Festival - Padova (PD)</strong><br>
+       13/05/2022
+      </p>
+    </div>
+
+
+    <div class="event-card">
+      <img src="img/Locandina9.jpg" alt="Private Event">
+      <p class="event-caption">
+        <strong> Happening Trentino - Caldonazzo (TN)</strong><br>
+       20/09/2021
+      </p>
+    </div>
+
+  </div>
+</section>
+</section>
+
+
+
+
   <!-- Footer -->
 <footer>
   <div class="footer-left">
@@ -62,3 +215,7 @@
 
 </body>
 </html>
+
+
+
+<!--https://take.quiz-maker.com/Q72YJXMJS-->
