--- a/about_us.html
+++ b/about_us.html
@@ -18,9 +18,15 @@
     <a href="contact.html">Contact</a>
   </nav>
 
+<header class="page-header">
+  <img src="img/about_us.jpg" alt="The Strangers live">
+  <div class="header-overlay">
+  </div>
+</header>
   <!-- About Section -->
   <section>
     <h1>About Us</h1>
+
     <p>
       Siamo una band nata nel luglio 2021 dall'incontro quasi casuale di un gruppo di ragazzi appassionati di musica. Partiti da sconosciuti, 
       abbiamo trasformato quell'incontro in un'avventura musicale e in un'amicizia che viviamo sia sul palco sia fuori, portando la nostra musica in Trentino, 
@@ -90,6 +96,21 @@
       </div>
     </div>
   </section>
+
+<section>
+  <h2>More</h2>
+
+  <a href="img/quotidiano_meeting.pdf" target="_blank" class="external-link">
+    📄 <i>Quotidiano Meeting</i> (PDF)
+  </a>
+
+  <br>
+
+  <a href="https://take.quiz-maker.com/Q72YJXMJS" target="_blank" class="external-link">
+    🌍 Scopri che Strangers sei
+  </a>
+</section>
+
 
   <!-- Footer -->
 <footer>
