--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 
+
+
+
   <!-- Navigation -->
   <nav>
     <a href="index.html">Home</a>
@@ -17,10 +20,15 @@
     <a href="contact.html">Contact</a>
   </nav>
 
+<header class="page-header">
+  <img src="img/contancts2.jpg" alt="The Strangers live">
+  <div class="header-overlay">
+  </div>
+</header>
   <!-- Contact Section -->
   <section id="contact">
     <h1>Contatti</h1>
-    <h2>info.thestrangersband@gamil.com</h2>
+    <h2>info.thestrangersband@gmail.com</h2>
 
     <p>info tecniche - +39 345 9231078 (Marco)</p>
 
