--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <section>
    <h1>The Strangers - Official Website</h1>
      <h2>VIVA!</h2>
-    <p>Our music, our story, our passion. Welcome to our official page!</p>
-    <a href="music.html">Listen Now</a>
+    <p><i>Eh si.. Siamo una band di 17 persone! </i></p>
+<a href="music.html">Listen Now</a>
 </section>
   <!-- Footer -->
 <footer>
