add image slider

--- a/music.html
+++ b/music.html
@@ -97,7 +97,7 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <div class="events-grid">
 
     <div class="event-card">
-      <img src="img/Locandina7.JPEG" alt="Live in Trento">
+      <img src="img/loc/Locandina7.JPEG" alt="Live in Trento">
       <p class="event-caption">
         <strong>  Happening Cremona (CR)</strong><br>
         15/06/2025 
@@ -105,7 +105,7 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <div class="event-card">
-      <img src="img/Locandina8.JPEG" alt="Festival Modena">
+      <img src="img/loc/Locandina8.JPEG" alt="Festival Modena">
       <p class="event-caption">
         <strong>Festa Istituto Don Gnocchi (MB)</strong><br>
         15/06/2025 
@@ -113,7 +113,7 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
         <div class="event-card">
-      <img src="img/Locandina10.JPEG" alt="Festival Modena">
+      <img src="img/loc/Locandina10.JPEG" alt="Festival Modena">
       <p class="event-caption">
         <strong>Festa Scuole Bruni (PD)</strong><br>
         30/05/2025 
@@ -121,7 +121,7 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <div class="event-card">
-      <img src="img/Locandina3.jpg" alt="Private Event">
+      <img src="img/loc/Locandina3.jpg" alt="Private Event">
       <p class="event-caption">
         <strong>Happening Cremona (CR)</strong><br>
        18/06/24
@@ -130,7 +130,7 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
         <div class="event-card">
-      <img src="img/Locandina1.jpg" alt="Private Event">
+      <img src="img/loc/Locandina1.jpg" alt="Private Event">
       <p class="event-caption">
         <strong>Focus Festival - Padova (PD)</strong><br>
        19/05/2024
@@ -140,7 +140,7 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
         <div class="event-card">
-      <img src="img/Locandina12.JPEG" alt="Private Event">
+      <img src="img/loc/Locandina12.JPEG" alt="Private Event">
       <p class="event-caption">
         <strong>Stagione Matrimoni 2024</strong><br>
        10/05/2024
@@ -148,14 +148,14 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     
     <div class="event-card">
-      <img src="img/locandina4.jpg" alt="Private Event">
+      <img src="img/loc/locandina4.jpg" alt="Private Event">
       <p class="event-caption">
         <strong>Happening Trentino - Levico Terme (TN)</strong><br>
        29/09/2023
       </p>
     </div>
         <div class="event-card">
-      <img src="img/locandina14.png" alt="Private Event">
+      <img src="img/loc/locandina14.png" alt="Private Event">
       <p class="event-caption">
         <strong>Meeting di Rimini (RM)</strong><br>
        20/08/2023
@@ -163,7 +163,7 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
         <div class="event-card">
 
-      <img src="img/Locandina6.jpg" alt="Private Event">
+      <img src="img/loc/Locandina6.jpg" alt="Private Event">
       <p class="event-caption">
         <strong> Focus Festival - Padova (PD)</strong><br>
        18/05/2023
@@ -171,7 +171,7 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
           </div>
             <div class="event-card">
-      <img src="img/Locandina5.JPG" alt="Private Event">
+      <img src="img/loc/Locandina5.JPG" alt="Private Event">
       <p class="event-caption">
         <strong> Happening Trentino - Cadonazzo (TN)</strong><br>
        30/09/2022
@@ -181,7 +181,7 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     
     <div class="event-card">
-      <img src="img/Locandina11.jpg" alt="Private Event">
+      <img src="img/loc/Locandina11.jpg" alt="Private Event">
       <p class="event-caption">
         <strong> Focus Festival - Padova (PD)</strong><br>
        13/05/2022
@@ -190,7 +190,7 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
     <div class="event-card">
-      <img src="img/Locandina9.jpg" alt="Private Event">
+      <img src="img/loc/locandina9.jpg" alt="Private Event">
       <p class="event-caption">
         <strong> Happening Trentino - Caldonazzo (TN)</strong><br>
        20/09/2021
@@ -241,10 +241,10 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     updateSlider();
   });
 
-  setInterval(() => {
+/*setInterval(() => {
   index = (index + 1) % videos.length;
   updateSlider();
-}, 6000);
+}, 6000); */
 
 </script>
 
