--- a/index.html
+++ b/index.html
@@ -27,11 +27,37 @@
 
  
 <section>
-   <h1>The Strangers - Official Website</h1>
-     <h2>VIVA!</h2>
-    <p><i>Eh si.. Siamo una band di 17 persone! </i></p>
-<a href="music.html">Listen Now</a>
+  <h1>The Strangers – Official Website</h1>
+
+
+  <!-- Image Slider -->
+  <div class="image-slider">
+    <button class="img-btn prev">&#10094;</button>
+
+    <div class="img-track">
+      <img src="img/slider/IMG1.jpg" alt="Live show">
+      <img src="img/slider/IMG2.jpeg" alt="Live show">
+      <img src="img/slider/IMG3.jpeg" alt="Live show">
+      <img src="img/slider/IMG4.jpeg" alt="Live show">
+      <img src="img/slider/IMG5.jpeg" alt="Live show">
+      <img src="img/slider/IMG6.jpg" alt="Live show">
+      <img src="img/slider/IMG7.jpeg" alt="Live show">
+      <img src="img/slider/IMG8.jpg" alt="Live show">
+      <img src="img/slider/IMG10.jpeg" alt="Live show">
+    </div>
+
+    <button class="img-btn next">&#10095;</button>
+  </div>
+
+  
+  <p><i>Eh si.. Siamo una band di 17 persone!</i></p>
+  <h2>VIVA!</h2>
+  <a href="music.html" class="cta-link">Listen Now</a>
 </section>
+
+
+
+
   <!-- Footer -->
 <footer>
   <div class="footer-left">
@@ -45,6 +71,32 @@
         <img src="img/minilogo_2.jpg" alt="The Strangers Band Logo" class="footer-logo">
   </div>
 </footer>
+
+
+
+<script>
+  const track = document.querySelector('.img-track');
+  const images = document.querySelectorAll('.img-track img');
+  const prev = document.querySelector('.img-btn.prev');
+  const next = document.querySelector('.img-btn.next');
+
+  let current = 0;
+
+  function updateSlider() {
+    track.style.transform = `translateX(-${current * 100}%)`;
+  }
+
+  next.addEventListener('click', () => {
+    current = (current + 1) % images.length;
+    updateSlider();
+  });
+
+  prev.addEventListener('click', () => {
+    current = (current - 1 + images.length) % images.length;
+    updateSlider();
+  });
+</script>
+
 
 </body>
 </html>
