--- a/about_us.html
+++ b/about_us.html
@@ -32,7 +32,7 @@
       abbiamo trasformato quell'incontro in un'avventura musicale e in un'amicizia che viviamo sia sul palco sia fuori, portando la nostra musica in Trentino, 
       Emilia Romagna e Lombardia.
     </p>
-    <p> Con 16 musicisti sul palco, la nostra formazione sprigiona energia grazie a una sezione fiati capace di trascinare il pubblico fin dal primo istante.
+    <p> Con 16 musicisti sul palco, la nostra formazione vanta una sezione fiati capace di trascinare il pubblico fin dal primo istante.
       Il nostro repertorio riflette in modo poliedrico tutti i membri della band, spaziando dal rock ‘n’ roll ai successi pop del momento, 
       dal rock classico al funk fino alla disco.  </p>     
       <p>Ogni brano è arricchito da arrangiamenti originali, e ogni serata è pensata per far ballare e divertire 
