--- a/index.html
+++ b/index.html
@@ -36,14 +36,31 @@
 
     <div class="img-track">
       <img src="img/slider/IMG1.jpg" alt="Live show">
-      <img src="img/slider/IMG2.jpeg" alt="Live show">
-      <img src="img/slider/IMG3.jpeg" alt="Live show">
+      <img src="img/slider/IMG2.jpg" alt="Live show">
+      <img src="img/slider/IMG3.jpg" alt="Live show">
+      <img src="img/slider/IMG4.5.jpeg" alt="Live show">
       <img src="img/slider/IMG4.jpeg" alt="Live show">
       <img src="img/slider/IMG5.jpeg" alt="Live show">
       <img src="img/slider/IMG6.jpg" alt="Live show">
       <img src="img/slider/IMG7.jpeg" alt="Live show">
-      <img src="img/slider/IMG8.jpg" alt="Live show">
+      <img src="img/slider/IMG8.JPEG" alt="Live show">
+      <img src="img/slider/IMG9.5.jpeg" alt="Live show">
+      <img src="img/slider/IMG9.jpg" alt="Live show">
       <img src="img/slider/IMG10.jpeg" alt="Live show">
+      <img src="img/slider/IMG11.jpg" alt="Live show">
+      <img src="img/slider/IMG12.jpeg" alt="Live show">
+      <img src="img/slider/IMG13.jpg" alt="Live show">
+      <img src="img/slider/IMG15.jpg" alt="Live show">
+      <img src="img/slider/IMG16.JPEG" alt="Live show">
+      <img src="img/slider/IMG17.jpeg" alt="Live show">
+      <img src="img/slider/IMG18.jpeg" alt="Live show">
+      <img src="img/slider/IMG19.JPEG" alt="Live show">
+      <img src="img/slider/IMG20.jpg" alt="Live show">
+      <img src="img/slider/IMG21.JPEG" alt="Live show">
+      <img src="img/slider/IMG22.JPEG" alt="Live show">
+      <img src="img/slider/IMG23.jpeg" alt="Live show">
+      <img src="img/slider/IMG24.jpg" alt="Live show">
+      <img src="img/slider/IMG26.JPEG" alt="Live show">
     </div>
 
     <button class="img-btn next">&#10095;</button>
@@ -95,6 +112,11 @@
     current = (current - 1 + images.length) % images.length;
     updateSlider();
   });
+
+  setInterval(() => {
+  index = (index + 1) % images.length;
+  updateSlider();
+}, 6000);
 </script>
 
 
